gcc/testsuite/gdc.test/fail_compilation/test21304.d
/* TEST_OUTPUT:
---
fail_compilation/test21304.d(6): Error: undefined identifier `unknown`
---
*/
int[unknown] values = [1, 2, 3];
